--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.idea/*
-**/build
-build/*
-.gradle/*
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+/out/
