--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,7 @@ plugins {
 
 group = "com.sellenium"
 version = "0.0.1-SNAPSHOT"
-//java.sourceCompatibility = JavaVersion.VERSION_11
-java.sourceCompatibility = JavaVersion.VERSION_17
-java.targetCompatibility = JavaVersion.VERSION_17
+java.sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
@@ -34,13 +32,16 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    //testCompile group: 'junit', name: 'junit', version: '4.12'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    testImplementation 'org.testng:testng:7.7.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.7.1'
-    testImplementation 'org.seleniumhq.selenium:selenium-support:4.7.1'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
-    testImplementation ('com.google.code.gson:gson:2.10.1')
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.testng:testng:6.9.10'
+    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:4.8.1'
+    testCompile 'org.seleniumhq.selenium:selenium-support:4.8.1'
+    testCompile 'io.github.bonigarcia:webdrivermanager:5.3.2'
+    testCompile("org.seleniumhq.selenium:selenium-api:4.8.1")
+    testCompile ("com.google.code.gson:gson:2.8.5")
+
+    // Selenium Java Client
+    testCompile 'org.seleniumhq.selenium:selenium-java:4.8.1'
 
 
 }
@@ -54,10 +55,10 @@ sonarqube {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "17"
+    kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "17"
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 test {
@@ -86,3 +87,4 @@ test {
     //Force tests to always run, even if they haven't been updated
     outputs.upToDateWhen { false }
 }
+
