--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,14 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //testImplementation group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.testng:testng:6.9.10'
-    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:4.8.1'
-    testCompile 'org.seleniumhq.selenium:selenium-support:4.8.1'
-    testCompile 'io.github.bonigarcia:webdrivermanager:5.3.2'
-    testCompile("org.seleniumhq.selenium:selenium-api:4.8.1")
+
+    //Selenium
+    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:4.7.1'
+    testCompile 'org.seleniumhq.selenium:selenium-support:4.7.1'
+    testCompile 'io.github.bonigarcia:webdrivermanager:5.3.1'
+    testCompile("org.seleniumhq.selenium:selenium-api:4.7.1")
     testCompile ("com.google.code.gson:gson:2.8.5")
 
     // Selenium Java Client
